--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "DevTest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/core-auth": "^1.3.2",
+    "axios": "^0.21.1",
+    "nodemon": "^2.0.12",
     "telegraf": "^4.4.1"
   }
 }
