--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/ai-text-analytics": "^5.1.0",
     "axios": "^0.21.1",
     "nodemon": "^2.0.12",
     "telegraf": "^4.4.1"
