--- a/.github/workflows/deployment_msla-telebot-demo.yml
+++ b/.github/workflows/deployment_msla-telebot-demo.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
         path: .
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'production'
@@ -52,5 +52,5 @@ jobs:
       with:
         app-name: 'msla-telebot-demo'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_96f6a5247e9544319741ae0282a44011 }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_84d14db90cf4417f9a6414e537cfe100 }}
         package: .
