--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,6 @@
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
     "axios": "^0.21.1",
-    "nodemon": "^2.0.12",
     "telegraf": "^4.4.1"
   }
 }
