--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "telegraf": "^4.4.1"
   }
 }
